fixed alignments

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
   padding: 0;
 }
 body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
   /* background-color:#f8f9fa; */
   background-image: url('img/bg-img.png');
   background-size: cover;
@@ -36,7 +41,7 @@ nav ul li{
 
 nav ul li a{
   text-decoration: none;
-  font-size: 90%;
+  font-size: 85%;
   color: rgb(214, 214, 214);
 }
 
@@ -47,7 +52,7 @@ nav ul li a:hover{
 
 .left a{
   text-decoration: none;
-  font-size: 90% ;
+  font-size: 85% ;
   color: rgb(214, 214, 214);
 }
 .left a:hover{
@@ -131,7 +136,7 @@ box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
 }
 
 footer{
-  margin-top: 10%;
+  margin-top: auto;
   bottom: 0;
   background-color: #2c3e50;
   font-size:70%;
